--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://www.fontspace.com/a-assassin-ninja-font-f51018" rel="stylesheet">
     <link rel="stylesheet" href="assests/main.css"/>
     <title>The Underworld</title>
 </head>
@@ -14,10 +15,9 @@
             <h1 class="text-flicker-in-glow">We're <br><span>coming <br>soon</span></h1>
             <p class="text-focus-in">The Underworld is rising...are you ready? Add your email below to be added to our mailing list for announcements and launch deals.</p>
 
-            <form action="#">
+            <form name="contact" method="post" data-netlify="true">
                 <label for="Email">Email Address</label>
                 <input name='Email' id="Email" value="" type="email" placeholder="Email Address">
-                <img src="" class="error-icon" alt="">
                 <button type="submit"><img src="assests/images/icon-arrow copy.svg" alt="submit"></button>
             </form>
         </div>
