--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://www.fontspace.com/a-assassin-ninja-font-f51018" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://www.fontspace.com/a-assassin-ninja-font-f51018"> -->
     <link rel="stylesheet" href="assests/main.css"/>
     <title>The Underworld</title>
 </head>
